--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.5",
+    "@angular/animations": "14.2.12",
     "@angular/cdk": "^12.2.13",
-    "@angular/common": "^13.3.12",
+    "@angular/common": "14.2.12",
     "@angular/compiler": "10.1.5",
-    "@angular/core": "^13.3.12",
-    "@angular/forms": "^10.1.5",
-    "@angular/localize": "^10.1.5",
+    "@angular/core": "14.2.12",
+    "@angular/forms": "14.2.12",
+    "@angular/localize": "14.2.12",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "10.1.5",
     "@angular/platform-browser-dynamic": "10.1.5",
@@ -49,7 +49,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1001.5",
     "@angular/cli": "10.1.5",
-    "@angular/compiler-cli": "10.1.5",
+    "@angular/compiler-cli": "14.2.12",
     "@types/bootstrap": "5.0.0",
     "@types/chartist": "0.11.0",
     "@types/jasmine": "3.5.14",
@@ -68,6 +68,6 @@
     "sass": "^1.51.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
-    "typescript": "4.0.3"
+    "typescript": "4.8.4"
   }
 }
